Adding type=text to pass hexlet-check

--- a/test/fixtures/form2.html
+++ b/test/fixtures/form2.html
@@ -1,1 +1,1 @@
-<form method="post" action="#"><label for="name">Name</label><input name="name" value=""><input type="submit" name="commit" value="Save"></form>
+<form method="post" action="#"><label for="name">Name</label><input value="" type="text" name="name"><input value="Save" type="submit" name="commit"></form>
