--- a/test/fixtures/form1.html
+++ b/test/fixtures/form1.html
@@ -1,1 +1,1 @@
-<form method="post" action="#"><label for="job">Job</label><textarea name="job" cols="20" rows="40">hexlet</textarea><label for="gender">Gender</label><select name="gender"><option value="m" selected>m</option><option value="f">f</option></select></form>
+<form method="post" action="#"><label for="job">Job</label><textarea name="job" cols="20" rows="40">hexlet</textarea><label for="gender">Gender</label><select name="gender"><option value="m" selected="true">m</option><option value="f" selected="false">f</option></select></form>
